# JellyCord

./: .dockerignore  .env  .gitignore  Cargo.toml  Changelog.md  Dockerfile  README.md  build.rs  docker-compose.yaml  jellycord.yaml.template  sqlx-data.json
docker_build/: entrypoint.sh
migrations/: 20210906145554_initial_migration.sql  20220907162027_front.sql  20220907162036_library.sql
src/: database.rs  main.rs
src/commands/: help.rs  init.rs  mod.rs  pause.rs  ping.rs  reset.rs
