[package]
name = "jellycord"
version = "0.1.6"
edition = "2024"
license = "MIT"
readme = "README.md"
authors = ["DepriSheep"]
repository = "https://github.com/Vernoxvernax/JellyCord"

[dependencies]
sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "sqlite", "migrate"] }
serenity = "0.12.4"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros"] }
config = "0.15.8"
isahc = "1.7.2"
serde = "1.0.218"
serde_derive = "1.0.218"
serde_json = "1.0.139"
chrono = "0.4.39"
regex = "1.11.1"
