[package]
name = "jellycord"
version = "0.1.6"
edition = "2024"
license = "MIT"
readme = "README.md"
authors = ["DepriSheep"]
repository = "https://github.com/Vernoxvernax/JellyCord"

[dependencies]
sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "sqlite", "migrate"] }
serenity = "0.12.4"
tokio = { version = "1.44.1", features = ["rt-multi-thread", "macros"] }
config = "0.15.11"
serde = "1.0.219"
serde_derive = "1.0.219"
serde_json = "1.0.140"
chrono = "0.4.40"
regex = "1.11.1"
reqwest = "0.12.15"
